--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,6 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 
+.DS_Store
 iOSInjectionProject/
+
